--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     annotationProcessor "androidx.annotation:annotation:$annotationProcessorVersion"
+
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
